--- a/css/style.css
+++ b/css/style.css
@@ -1056,3 +1056,193 @@
 		height: 17em;
 		width: 100%;
 	}
+
+/* Tooltip */
+	.tooltip {
+		display: inline;
+		position: relative;
+		z-index: 999;
+	
+	}
+	
+	.tooltip
+	.tooltip-content {
+		position: absolute;
+		background: url(../images/shape1.svg) no-repeat center bottom;
+		background-size: 100% 100%;
+		z-index: 9999;
+		width: 200px;
+		bottom: 100%;
+		left: 50%;
+		margin-left: -100px;
+		padding: 50px 30px;
+		text-align: center;
+		color: #fff;
+		opacity: 0;
+		cursor: default;
+		font-size: .95em;
+		line-height: 1.4;
+		pointer-events: none;
+		-webkit-transform: scale3d(0.1,0.2,1);
+		transform: scale3d(0.1,0.2,1);
+		-webkit-transform-origin: 50% 120%;
+		transform-origin: 50% 120%;
+		-webkit-transition: opacity 0.4s, -webkit-transform 0.4s;
+		transition: opacity 0.4s, transform 0.4s;
+		-webkit-transition-timing-function: ease, cubic-bezier(0.6,0,0.4,1);
+		transition-timing-function: ease, cubic-bezier(0.6,0,0.4,1);
+	}
+	
+	.tooltip:hover .tooltip-content {
+		opacity: 1;
+		pointer-events: auto;
+		-webkit-transform: scale3d(1,1,1);
+		transform: scale3d(1,1,1);
+	}
+	
+	
+/* Arrow */
+	
+	.tooltip-content::after {
+		content: '';
+		position: absolute;
+		width: 16px;
+		height: 16px;
+		left: 50%;
+		margin-left: -8px;
+		top: 100%;
+		background: #0CC;
+		-webkit-transform: translate3d(0,-60%,0) rotate3d(0,0,1,45deg);
+		transform: translate3d(0,-60%,0) rotate3d(0,0,1,45deg);
+			text-decoration: none;
+	}
+	
+/*Mission, Vision, Values */
+	.tool1 {
+		display: inline-block;
+		position: relative;
+		z-index: 999;
+		margin: 0 1em;
+		width: 210px;
+
+	}
+	
+/* Gap filler */
+	.tool1::after {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 20px;
+		bottom: 100%;
+		left: 50%;
+		pointer-events: none;
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
+	
+	}
+	
+	.tool1:hover::after {
+		pointer-events: auto;
+
+	}
+	
+	.tool1-content {
+		position: absolute;
+		z-index: 9999;
+		width: 300px;
+		left: 50%;
+		bottom: 100%;
+		font-size: 15px;
+		line-height: 1.4;
+		text-align: center;
+		font-weight: 400;
+		color: #0CC;
+		background: transparent;
+		opacity: 0;
+		margin: 0 0 20px -150px;
+		cursor: default;
+		pointer-events: none;
+		-webkit-font-smoothing: antialiased;
+		-webkit-transition: opacity 0.3s 0.3s;
+		transition: opacity 0.3s 0.3s;
+	
+	}
+	
+	.tool1:hover .tool1-content {
+		opacity: 1;
+		pointer-events: auto;
+		-webkit-transition-delay: 0s;
+		transition-delay: 0s;
+
+	}
+	
+	.tool1-content span {
+		display: block;
+	
+	}
+	
+	.tool1-text {
+		border-bottom: 10px solid #0CC;
+		overflow: hidden;
+		-webkit-transform: scale3d(0,1,1);
+		transform: scale3d(0,1,1);
+		-webkit-transition: -webkit-transform 0.3s 0.3s;
+		transition: transform 0.3s 0.3s;
+	
+	}
+	
+	.tool1:hover .tool1-text {
+		-webkit-transition-delay: 0s;
+		transition-delay: 0s;
+		-webkit-transform: scale3d(1,1,1);
+		transform: scale3d(1,1,1);
+	
+	}
+	
+	.tool1-inner {
+		background: #666;
+		padding: 40px;
+		-webkit-transform: translate3d(0,100%,0);
+		transform: translate3d(0,100%,0);
+		webkit-transition: -webkit-transform 0.3s;
+		transition: transform 0.3s;
+
+	}
+	
+	.tool1:hover .tool1-inner {
+		-webkit-transition-delay: 0.3s;
+		transition-delay: 0.3s;
+		-webkit-transform: translate3d(0,0,0);
+		transform: translate3d(0,0,0);
+
+	}
+	
+/* Arrow */
+	
+	.tool1-content::after {
+		content: '';
+		bottom: -20px;
+		left: 50%;
+		border: solid transparent;
+		height: 0;
+		width: 0;
+		position: absolute;
+		pointer-events: none;
+		border-color: transparent;
+		border-top-color: #0CC;
+		border-width: 10px;
+		margin-left: -10px;
+	}
+
+	.rectangle {
+		text-align: center;
+		margin-top: 5rem;
+		margin-bottom: 7rem;
+	
+	}
+	
+	.rectangle img {
+		border-radius: 50%;
+		
+	}
+	
