--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,291 @@
 @import url(font-awesome.min.css);
 @import url("http://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Source+Code+Pro:400");
 
+@font-face {
+	font-family: 'entypo';
+	src:url('../fonts/entypo.eot');
+	src:url('../fonts/entypo.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/entypo.svg#entypo') format('svg'),
+		url('../fonts/entypo.woff') format('woff'),
+		url('../fonts/entypo.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+.fc-slideshow {
+	position: relative;
+	width: 400px;
+	height: 400px;
+	box-shadow: inset 0 0 3px rgba(0,0,0,0.4), 0 0 0 10px #0CC;
+	border-radius: 50%;
+	margin: 0 auto;
+	-webkit-perspective: 1200px;
+	-moz-perspective: 1200px;
+	perspective: 1200px;
+}
+
+.fc-slideshow nav {
+	top: 0;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	z-index: 10000;
+}
+
+.fc-slideshow nav > div {
+	position: absolute;
+	height: 100%;
+	top: 0;
+	width: 50%;
+}
+
+.fc-slideshow nav .fc-left {
+	left: 0;
+}
+
+.fc-slideshow nav .fc-right {
+	right: 0;
+}
+
+.fc-slideshow nav > div span {
+	height: 33%;
+	width: 100%;
+	position: absolute;
+	left: 0;
+	cursor: pointer;
+}
+
+.fc-slideshow nav > div span:first-child {
+	top: 0;
+}
+
+.fc-slideshow nav > div span:nth-child(2) {
+	top: 33%;
+}
+
+.fc-slideshow nav > div span:nth-child(3) {
+	top: 66%;
+}
+
+.fc-slideshow nav i,
+.no-csstransforms3d .fc-slideshow nav > div span {
+	position: absolute;
+	width: 100%;
+	height: 40px;
+	top: 50%;
+	margin-top: -20px;
+	pointer-events: none;
+	opacity: 0;
+	-webkit-backface-visibility: hidden;
+	-webkit-transition: all 0.2s ease;
+	-moz-backface-visibility: hidden;
+	-moz-transition: all 0.2s ease;
+	backface-visibility: hidden;
+	transition: all 0.2s ease;
+}
+
+/* Some fallbacks */
+.no-csstransforms3d .fc-slideshow nav > div span {
+	z-index: 1000;
+	width: 40px;
+	background: rgba(0,0,0,0);
+}
+
+.no-csstransforms3d .fc-slideshow nav .fc-left span {
+	left: -80px;
+}
+
+.no-csstransforms3d .fc-slideshow nav .fc-right span {
+	right: -80px;
+	left: auto;
+}
+
+.no-csstransforms3d .fc-slideshow nav i {
+	width: 40px;
+	cursor: pointer;
+}
+
+.fc-slideshow nav .fc-left i {
+	-webkit-transform-origin: 100% 50%;
+	-moz-transform-origin: 100% 50%;
+	transform-origin: 100% 50%;
+	text-align: left;
+}
+
+.fc-slideshow nav .fc-right i {
+	-webkit-transform-origin: 0% 50%;
+	-moz-transform-origin: 0% 50%;
+	transform-origin: 0% 50%;
+	text-align: right;
+}
+
+.fc-slideshow nav i.icon-arrow-left {
+	left: 0;
+}
+
+.no-csstransforms3d .fc-slideshow nav i.icon-arrow-left {
+	left: -100px;
+}
+
+.fc-slideshow nav i.icon-arrow-right {
+	right: 0;
+}
+
+.no-csstransforms3d .fc-slideshow nav i.icon-arrow-right {
+	right: -60px;
+}
+
+.icon-arrow-left:before, 
+.icon-arrow-right:before {
+	font-family: 'entypo';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 20px;
+	background: #0CC;
+	color: #fff;
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	display: inline-block;
+	margin: 0 20px;
+	border-radius: 20% 10% 50% 5% / 25% 10% 30% 75%;
+	-webkit-font-smoothing: antialiased;
+}
+
+.icon-arrow-left:before {
+	content: "\e002";
+}
+
+.icon-arrow-right:before {
+	content: "\e003";
+}
+
+.csstransforms3d .fc-slideshow nav > div span:hover ~ i,
+.no-csstransforms3d .fc-slideshow nav i,
+.no-csstransforms3d .fc-slideshow nav > div span {
+	opacity: 1;
+}
+
+.csstransforms3d .fc-slideshow nav > div span:nth-child(2):hover ~ i{
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	transform: rotate(0deg);
+}
+
+.csstransforms3d .fc-slideshow nav > .fc-left span:first-child:hover ~ i,
+.csstransforms3d .fc-slideshow nav > .fc-right span:nth-child(3):hover ~ i {
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+
+.csstransforms3d .fc-slideshow nav > .fc-right span:first-child:hover ~ i,
+.csstransforms3d .fc-slideshow nav > .fc-left span:nth-child(3):hover ~ i {
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+}
+
+ul.fc-slides {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+ul.fc-slides li {
+	display: none;
+}
+
+.no-js ul.fc-slides li {
+	display: block;
+}
+
+.fc-flip {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+}
+
+.fc-flip div {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	border-radius: 50%;
+	top: 0;
+	left: 0;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.fc-flip .fc-back {
+	-webkit-transform: rotateY(-180deg);
+	-moz-transform: rotateY(-180deg);
+	transform: rotateY(-180deg);
+}
+
+.fc-slideshow img {
+	border-radius: 50%;
+}
+
+.fc-slideshow h3 {
+	position: absolute;
+	color: #fff;
+	top: 50%;
+	margin-top: 90px;
+	line-height: 50px;
+	height: 50px;
+	left: 80px;
+	right: 80px;
+	background: #0CC;
+	font-size: 22px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	text-align: center;
+	border-radius: 20% 10% 50% 5% / 25% 10% 30% 75%;
+}
+
+.fc-overlay-light,
+.fc-overlay-dark {
+	opacity: 0;
+}
+
+.fc-overlay-light {
+	background: rgba(255,255,255,1);
+}
+
+.fc-overlay-dark {
+	background: rgba(0,0,0,1);
+}
+
+/* No JS fallback */
+
+.no-js .fc-slideshow {
+	height: auto;
+	box-shadow: none;
+}
+
+.no-js .fc-slideshow h3 {
+	position: relative;
+	width: auto;
+	height: auto;
+	left: auto;
+	right: auto;
+	top: auto;
+	margin: 5px;
+}
+
+
+
+
 /* Basic */
 
 	body {
@@ -1060,6 +1345,7 @@
 		height: 27em;
 		width: 100%;
 	}
+	
 
 /* Tooltip */
 	.tooltip {
@@ -1539,7 +1825,7 @@
 	.slideshow nav span {
 		position: fixed;
 		z-index: 1000;
-		color: #59656c;
+		color: #0CC;
 		text-align: center;
 		padding: 3%;
 		cursor: pointer;
@@ -1561,12 +1847,12 @@
 		top: 0;
 		right: 0;
 		padding: 0.5em 1em;
-		color: #31373a;
+		color: #0CC;
 	}
 	
 	.icon:before,
 	.icon:after {
-		font-family: 'fontawesome';
+		font-family: 'entypo';
 		speak: none;
 		font-style: normal;
 		font-weight: normal;
@@ -1578,15 +1864,15 @@
 	}
 	
 	span.nav-prev:before {
-		content: "\e601";
+		content: "\e002";
 	}
 	
 	span.nav-next:before  {
-		content: "\e600";
+		content: "\e003";
 	}
 	
 	span.nav-close:before {
-		content: "\e602";
+		content: "\2715";
 	}
 	
 /* Info on arrow key navigation */
@@ -1617,12 +1903,12 @@
 	
 	.info-keys:before {
 		left: 10px;
-		content: "\e603";
+		content: "\e002";
 	}
 	
 	.info-keys:after {
 		right: 10px;
-		content: "\e604";
+		content: "\e003";
 	}
 	
 	@media screen and (max-width: 60em) {
