--- a/css/style.css
+++ b/css/style.css
@@ -1927,10 +1927,15 @@ ul.fc-slides li {
 			width: 33.3%;
 		}
 	
+		.slideshow  {
+			width: 95%;
+			top: 6%;
+		}
+
 		.slideshow li {
 			width: 100%;
 			height: 100%;
-			top: 0;
+			top: 3%;
 			left: 0;
 			margin: 0;
 		}
@@ -1940,11 +1945,12 @@ ul.fc-slides li {
 			margin: 0 auto;
 			max-width: 100%;
 		}
-	
-		.slideshow nav span,
-		.slideshow nav span.nav-close {
-			font-size: 1.8em;
-			padding: 0.3em;
+		
+		.slideshow nav span {
+			font-size: 1.5em;
+			margin-top: 20%;
+			margin-right: 21%;
+			
 		}
 	
 		.info-keys {
