--- a/css/style.css
+++ b/css/style.css
@@ -317,14 +317,13 @@ ul.fc-slides li {
 		-o-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-		border-bottom: solid 1px #e4e4e4;
+
 		color: inherit;
 		text-decoration: none;
 	}
 
 	a:hover {
 			border-bottom-color: transparent;
-			color: #4acaa8 !important;
 	}
 
 	strong, b {
@@ -1373,6 +1372,7 @@ ul.fc-slides li {
 		z-index: 9999;
 		width: 200px;
 		bottom: 100%;
+		
 		left: 50%;
 		margin-left: -100px;
 		padding: 50px 30px;
@@ -1399,7 +1399,7 @@ ul.fc-slides li {
 		-webkit-transform: scale3d(1,1,1);
 		transform: scale3d(1,1,1);
 	}
-	
+		
 	
 /* Arrow */
 	
@@ -2119,12 +2119,9 @@ ul.fc-slides li {
 	}
 	
 	.ch-info p {
-		color: #fff;
-		padding: 10px 5px;
+		color: #FFF;
 		font-style: italic;
-		margin: 0 30px;
-		font-size: 12px;
-		border-top: 1px solid rgba(255,255,255,0.5);
+		font-size: 15px;
 		text-align: center;
 	}
 	
@@ -2142,7 +2139,7 @@ ul.fc-slides li {
 	
 	.ch-info p a:hover {
 		color: #fff222;
-		color: rgba(255,242,34, 0.8);
+		color: #666;
 	}
 	
 	
