--- a/css/style.css
+++ b/css/style.css
@@ -1606,7 +1606,8 @@ ul.fc-slides li {
 		padding: 10px;
 		text-align: left;
 		position: relative;
-		font-size: 1em;
+		font-size: 90%;
+		line-height: 150%;
 
 	}
 	
@@ -1748,6 +1749,7 @@ ul.fc-slides li {
 	
 		
 	}	
+	
 	
 /* Portfolio */
 	.grid-gallery ul {
@@ -2064,12 +2066,12 @@ ul.fc-slides li {
 			
 		.slideshow nav span.nav-next {
 			left: 55%;
-			margin-top: 20%;
+			margin-top: 9%;
 		}
 		
 		.slideshow nav span.nav-prev {
 			right: 81%;
-			margin-top: 20%;
+			margin-top: 9%;
 		}
 		
 		.button.small {
