Added moz, ms, o

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
 	margin: 0 auto;
 	-webkit-perspective: 1200px;
 	-moz-perspective: 1200px;
+	-ms-perspective: 1200px;	
+	-o-perspective: 1200px;	
 	perspective: 1200px;
 }
 
@@ -72,6 +74,10 @@
 	-webkit-transition: all 0.2s ease;
 	-moz-backface-visibility: hidden;
 	-moz-transition: all 0.2s ease;
+	-ms-backface-visibility: hidden;
+	-ms-transition: all 0.2s ease;
+	-o-backface-visibility: hidden;
+	-o-transition: all 0.2s ease;
 	backface-visibility: hidden;
 	transition: all 0.2s ease;
 }
@@ -100,6 +106,8 @@
 .fc-slideshow nav .fc-left i {
 	-webkit-transform-origin: 100% 50%;
 	-moz-transform-origin: 100% 50%;
+	-ms-transform-origin: 100% 50%;
+	-o-transform-origin: 100% 50%;	
 	transform-origin: 100% 50%;
 	text-align: left;
 }
@@ -107,6 +115,8 @@
 .fc-slideshow nav .fc-right i {
 	-webkit-transform-origin: 0% 50%;
 	-moz-transform-origin: 0% 50%;
+	-ms-transform-origin: 0% 50%;
+	-o-transform-origin: 0% 50%;
 	transform-origin: 0% 50%;
 	text-align: right;
 }
@@ -144,6 +154,9 @@
 	margin: 0 20px;
 	border-radius: 20% 10% 50% 5% / 25% 10% 30% 75%;
 	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	-ms-font-smoothing: antialiased;
+	-o-font-smoothing: antialiased;
 }
 
 .icon-arrow-left:before {
@@ -163,6 +176,9 @@
 .csstransforms3d .fc-slideshow nav > div span:nth-child(2):hover ~ i{
 	-webkit-transform: rotate(0deg);
 	-moz-transform: rotate(0deg);
+	-ms-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	
 	transform: rotate(0deg);
 }
 
@@ -170,6 +186,8 @@
 .csstransforms3d .fc-slideshow nav > .fc-right span:nth-child(3):hover ~ i {
 	-webkit-transform: rotate(45deg);
 	-moz-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
 	transform: rotate(45deg);
 }
 
@@ -177,6 +195,8 @@
 .csstransforms3d .fc-slideshow nav > .fc-left span:nth-child(3):hover ~ i {
 	-webkit-transform: rotate(-45deg);
 	-moz-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
 	transform: rotate(-45deg);
 }
 
@@ -200,6 +220,8 @@ ul.fc-slides li {
 	border-radius: 50%;
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+	-o-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 }
 
@@ -212,15 +234,21 @@ ul.fc-slides li {
 	left: 0;
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+	-o-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
+	-ms-backface-visibility: hidden;
+	-o-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
 
 .fc-flip .fc-back {
 	-webkit-transform: rotateY(-180deg);
 	-moz-transform: rotateY(-180deg);
+	-ms-transform: rotateY(-180deg);
+	-o-transform: rotateY(-180deg);
 	transform: rotateY(-180deg);
 }
 
@@ -426,6 +454,9 @@ ul.fc-slides li {
 
 	pre code {
 			-webkit-overflow-scrolling: touch;
+			-moz-overflow-scrolling: touch;
+			-ms-overflow-scrolling: touch;
+			-o-overflow-scrolling: touch;
 			display: block;
 			line-height: 1.5em;
 			overflow-x: auto;
@@ -1476,6 +1507,9 @@ ul.fc-slides li {
 		left: 50%;
 		pointer-events: none;
 		-webkit-transform: translateX(-50%);
+		-moz-transform: translateX(-50%);
+		-ms-transform: translateX(-50%);
+		-o-transform: translateX(-50%);
 		transform: translateX(-50%);
 	
 	}
@@ -1503,6 +1537,12 @@ ul.fc-slides li {
 		pointer-events: none;
 		-webkit-font-smoothing: antialiased;
 		-webkit-transition: opacity 0.3s 0.3s;
+		-moz-font-smoothing: antialiased;
+		-moz-transition: opacity 0.3s 0.3s;
+		-ms-font-smoothing: antialiased;
+		-ms-transition: opacity 0.3s 0.3s;
+		-o-font-smoothing: antialiased;
+		-o-transition: opacity 0.3s 0.3s;
 		transition: opacity 0.3s 0.3s;
 	
 	}
@@ -1511,6 +1551,9 @@ ul.fc-slides li {
 		opacity: 1;
 		pointer-events: auto;
 		-webkit-transition-delay: 0s;
+		-moz-transition-delay: 0s;
+		-ms-transition-delay: 0s;
+		-o-transition-delay: 0s;
 		transition-delay: 0s;
 
 	}
@@ -1524,16 +1567,28 @@ ul.fc-slides li {
 		border-bottom: 10px solid #0CC;
 		overflow: hidden;
 		-webkit-transform: scale3d(0,1,1);
+		-moz-transform: scale3d(0,1,1);
+		-ms-transform: scale3d(0,1,1);
+		o-transform: scale3d(0,1,1);
 		transform: scale3d(0,1,1);
 		-webkit-transition: -webkit-transform 0.3s 0.3s;
+		-moz-transition: -webkit-transform 0.3s 0.3s;
+		-ms-transition: -webkit-transform 0.3s 0.3s;
+		-o-transition: -webkit-transform 0.3s 0.3s;		
 		transition: transform 0.3s 0.3s;
 	
 	}
 	
 	.tool1:hover .tool1-text {
 		-webkit-transition-delay: 0s;
+		-moz-transition-delay: 0s;
+		-ms-transition-delay: 0s;
+		-o-transition-delay: 0s;
 		transition-delay: 0s;
 		-webkit-transform: scale3d(1,1,1);
+		-moz-transform: scale3d(1,1,1);
+		-ms-transform: scale3d(1,1,1);
+		-o-transform: scale3d(1,1,1);
 		transform: scale3d(1,1,1);
 	
 	}
@@ -1542,16 +1597,28 @@ ul.fc-slides li {
 		background: #666;
 		padding: 40px;
 		-webkit-transform: translate3d(0,100%,0);
+		-moz-transform: translate3d(0,100%,0);
+		-ms-transform: translate3d(0,100%,0);
+		-o-transform: translate3d(0,100%,0);
 		transform: translate3d(0,100%,0);
 		webkit-transition: -webkit-transform 0.3s;
+		moz-transition: -webkit-transform 0.3s;
+		ms-transition: -webkit-transform 0.3s;
+		o-transition: -webkit-transform 0.3s;
 		transition: transform 0.3s;
 
 	}
 	
 	.tool1:hover .tool1-inner {
 		-webkit-transition-delay: 0.3s;
+		-moz-transition-delay: 0.3s;
+		-ms-transition-delay: 0.3s;
+		-o-transition-delay: 0.3s;
 		transition-delay: 0.3s;
 		-webkit-transform: translate3d(0,0,0);
+		-moz-transform: translate3d(0,0,0);
+		-ms-transform: translate3d(0,0,0);
+		-o-transform: translate3d(0,0,0);
 		transform: translate3d(0,0,0);
 
 	}
@@ -1809,8 +1876,14 @@ ul.fc-slides li {
 		visibility: hidden;
 		overflow: hidden;
 		-webkit-perspective: 1000px;
+		-moz-perspective: 1000px;
+		-ms-perspective: 1000px;
+		-o-perspective: 1000px;
 		perspective: 1000px;
 		-webkit-transition: opacity 0.5s, visibility 0s 0.5s;
+		-moz-transition: opacity 0.5s, visibility 0s 0.5s;
+		-ms-transition: opacity 0.5s, visibility 0s 0.5s;
+		-o-transition: opacity 0.5s, visibility 0s 0.5s;
 		transition: opacity 0.5s, visibility 0s 0.5s;
 	}
 	
@@ -1818,6 +1891,9 @@ ul.fc-slides li {
 		opacity: 1;
 		visibility: visible;
 		-webkit-transition: opacity 0.5s;
+		-moz-transition: opacity 0.5s;
+		-ms-transition: opacity 0.5s;
+		-0-transition: opacity 0.5s;
 		transition: opacity 0.5s;
 	}
 	
@@ -1825,20 +1901,35 @@ ul.fc-slides li {
 		width: 100%;
 		height: 100%;
 		-webkit-transform-style: preserve-3d;
+		-moz-transform-style: preserve-3d;
+		-ms-transform-style: preserve-3d;
+		-o-transform-style: preserve-3d;
 		transform-style: preserve-3d;
 		-webkit-transform: translate3d(0,0,150px);
+		-moz-transform: translate3d(0,0,150px);
+		-ms-transform: translate3d(0,0,150px);
+		-o-transform: translate3d(0,0,150px);
 		transform: translate3d(0,0,150px);
 		-webkit-transition: -webkit-transform 0.5s;
+		-moz-transition: -webkit-transform 0.5s;
+		-ms-transition: -webkit-transform 0.5s;
+		-o-transition: -webkit-transform 0.5s;
 		transition: transform 0.5s;
 	}
 	
 	.slideshow ul.animatable li {
 		-webkit-transition: -webkit-transform 0.5s;
+		-moz-transition: -webkit-transform 0.5s;
+		-ms-transition: -webkit-transform 0.5s;
+		-o-transition: -webkit-transform 0.5s;
 		transition: transform 0.5s;
 	}
 	
 	.slideshow-open .slideshow ul {
 		-webkit-transform: translate3d(0,0,0);
+		-ms-transform: translate3d(0,0,0);
+		-moz-transform: translate3d(0,0,0);
+		-o-transform: translate3d(0,0,0);
 		transform: translate3d(0,0,0);
 	}
 	
@@ -1865,6 +1956,9 @@ ul.fc-slides li {
 		left: 0;
 		background: rgba(255,255,255,0.8);
 		-webkit-transition: opacity 0.3s;
+		-moz-transition: opacity 0.3s;
+		-ms-transition: opacity 0.3s;
+		-0-transition: opacity 0.3s;
 		transition: opacity 0.3s;
 	}
 	
@@ -1872,6 +1966,9 @@ ul.fc-slides li {
 		visibility: hidden;
 		opacity: 0;
 		-webkit-transition: opacity 0.3s, visibility 0s 0.3s;
+		-moz-transition: opacity 0.3s, visibility 0s 0.3s;
+		-ms-transition: opacity 0.3s, visibility 0s 0.3s;
+		-o-transition: opacity 0.3s, visibility 0s 0.3s;
 		transition: opacity 0.3s, visibility 0s 0.3s;
 	}
 	
@@ -1907,6 +2004,9 @@ ul.fc-slides li {
 	.slideshow nav span.nav-next {
 		top: 50%;
 		-webkit-transform: translateY(-50%);
+		-moz-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+		-o-transform: translateY(-50%);
 		transform: translateY(-50%);
 	}
 	
