--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,7 @@ ul.fc-slides li {
 	letter-spacing: 2px;
 	text-align: center;
 	border-radius: 20% 10% 50% 5% / 25% 10% 30% 75%;
+	display: none;
 }
 
 .fc-overlay-light,
@@ -1529,7 +1530,7 @@ ul.fc-slides li {
 		line-height: 1.4;
 		text-align: center;
 		font-weight: 400;
-		color: #0CC;
+		color: #d0dad6;
 		background: transparent;
 		opacity: 0;
 		margin: 0 0 20px -150px;
@@ -1564,7 +1565,7 @@ ul.fc-slides li {
 	}
 	
 	.tool1-text {
-		border-bottom: 10px solid #0CC;
+		border-bottom: 10px solid #d0dad6;
 		overflow: hidden;
 		-webkit-transform: scale3d(0,1,1);
 		-moz-transform: scale3d(0,1,1);
@@ -1594,7 +1595,7 @@ ul.fc-slides li {
 	}
 	
 	.tool1-inner {
-		background: #666;
+		background: #999;
 		padding: 40px;
 		-webkit-transform: translate3d(0,100%,0);
 		-moz-transform: translate3d(0,100%,0);
@@ -1635,7 +1636,7 @@ ul.fc-slides li {
 		position: absolute;
 		pointer-events: none;
 		border-color: transparent;
-		border-top-color: #0CC;
+		border-top-color: #d0dad6;
 		border-width: 10px;
 		margin-left: -10px;
 	}
@@ -1682,8 +1683,8 @@ ul.fc-slides li {
 		top: 0;
 		left: 0;
 		padding: 10px;
-		background: #999;
-		color: #3CC;
+		background: #d0dad6;
+		color: #fff;
 	}
 	
 	.grid2 figcaption h3 {
@@ -1697,7 +1698,6 @@ ul.fc-slides li {
 		padding: 5px 10px;
 		border-radius: 2px;
 		display: inline-block;
-		background: #ed4e6e;
 		color: #fff;
 	} 
 	
