--- a/css/style.css
+++ b/css/style.css
@@ -1370,7 +1370,7 @@ ul.fc-slides li {
 /* One */
 
 	#one:before {
-		background-image: url("http://placehold.it/900x200");
+		background-image: url("../images/home.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		content: '';
@@ -1384,7 +1384,7 @@ ul.fc-slides li {
  
 	#two:before {
 		
-		background-image: url("http://placehold.it/900x500");
+		background-image: url("../images/about.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		content: '';
