--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
 	box-shadow: inset 0 0 3px rgba(0,0,0,0.4), 0 0 0 10px #0CC;
 	border-radius: 50%;
 	margin: 0 auto;
+	margin-bottom: 10rem;
+	margin-top: 3rem;
 	-webkit-perspective: 1200px;
 	-moz-perspective: 1200px;
 	-ms-perspective: 1200px;	
@@ -385,11 +387,13 @@ ul.fc-slides li {
 	h2 {
 		font-size: 2em;
 		line-height: 1.5em;
+		color:#000;
 	}
 
 	h3 {
 		font-size: 1.75em;
 		line-height: 1.5em;
+		
 	}
 
 	h4 {
@@ -1530,7 +1534,7 @@ ul.fc-slides li {
 		line-height: 1.4;
 		text-align: center;
 		font-weight: 400;
-		color: #d0dad6;
+		color: #666;
 		background: transparent;
 		opacity: 0;
 		margin: 0 0 20px -150px;
@@ -1565,7 +1569,7 @@ ul.fc-slides li {
 	}
 	
 	.tool1-text {
-		border-bottom: 10px solid #d0dad6;
+		border-bottom: 10px solid #fcab92;
 		overflow: hidden;
 		-webkit-transform: scale3d(0,1,1);
 		-moz-transform: scale3d(0,1,1);
@@ -1595,7 +1599,7 @@ ul.fc-slides li {
 	}
 	
 	.tool1-inner {
-		background: #999;
+		background: #9cd7be;
 		padding: 40px;
 		-webkit-transform: translate3d(0,100%,0);
 		-moz-transform: translate3d(0,100%,0);
@@ -1636,7 +1640,7 @@ ul.fc-slides li {
 		position: absolute;
 		pointer-events: none;
 		border-color: transparent;
-		border-top-color: #d0dad6;
+		border-top-color: #fcab92;
 		border-width: 10px;
 		margin-left: -10px;
 	}
