--- a/css/style.css
+++ b/css/style.css
@@ -2373,7 +2373,8 @@ ul.fc-slides li {
 /* Footer */
 
 	#footer {
-		background: #fafafa;
+		background-image: url(../images/pattern.jpg);
+  		background-position: center center;
 		border-top: 0;
 		color: #c0c0c0;
 		overflow: hidden;
@@ -2405,7 +2406,5 @@ ul.fc-slides li {
 	}
 	
 	
-	@media screen and (max-width: 31.5em) {
-	}
 				
 	
